Creation of User Registration Service and its Controller

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 # Mongo DB:
 MONGO_URL=mongodb+srv://rapzadev:P0jDVB7XRKdOLYFU@cluster0.2hbw5.mongodb.net/shop?retryWrites=true&w=majority
+
+# CryptoJS:
+PASSWORD_SECRET=sdasd;sadasd*&213cf3asd1df2SDNNMMNBHJBERKDBB8V;BDF65
