Adding acces token with jwt in the login service

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGO_URL=mongodb+srv://rapzadev:P0jDVB7XRKdOLYFU@cluster0.2hbw5.mongodb.net/sho
 
 # CryptoJS:
 PASSWORD_SECRET=sdasd;sadasd*&213cf3asd1df2SDNNMMNBHJBERKDBB8V;BDF65
+
+# JWT
+JWT_SECRET=SJJHJKSHd;;;sdkksadjjHSAND;;SADMASHUHAs821hgf1bhhgg1gg1ff2d1gbb;
