--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3"
   },
   "scripts": {
